[package]
name = "octopus-harness-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_skill"

[lints]
workspace = true

[features]
default = ["workspace-source", "user-source", "threat-scanner"]
workspace-source = []
user-source = []
plugin-source = []
mcp-source = []
threat-scanner = ["octopus-harness-memory/threat-scanner"]

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
octopus-harness-memory = { path = "../octopus-harness-memory" }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
yaml-rust2 = { workspace = true }
parking_lot = "0.12"
