[package]
name = "octopus-harness-subagent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_subagent"

[lints]
workspace = true

[features]
default = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
octopus-harness-permission = { path = "../octopus-harness-permission" }
octopus-harness-session = { path = "../octopus-harness-session" }
octopus-harness-tool = { path = "../octopus-harness-tool" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
