[package]
name = "octopus-harness-tool-search"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_tool_search"

[lints]
workspace = true

[features]
default = []
backend-anthropic = []
backend-inline = []
scorer-default = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
octopus-harness-model = { path = "../octopus-harness-model" }
octopus-harness-tool = { path = "../octopus-harness-tool" }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
