[package]
name = "octopus-harness-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_tool"

[lints]
workspace = true

[features]
default = []
builtin-toolset = []
programmatic-tool-calling = []

[dependencies]
octopus-harness-contracts = { path = "../octopus-harness-contracts" }
octopus-harness-permission = { path = "../octopus-harness-permission" }
octopus-harness-sandbox = { path = "../octopus-harness-sandbox" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
