[package]
name = "octopus-infra-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
octopus-application = { path = "../octopus-application" }
octopus-domain = { path = "../octopus-domain" }
serde_json.workspace = true
sqlx.workspace = true

[dev-dependencies]
octopus-runtime = { path = "../octopus-runtime" }
tokio.workspace = true
