[package]
name = "octopus-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64 = "0.22"
include_dir = "0.7"
octopus-core = { path = "../octopus-core" }
octopus-platform = { path = "../octopus-platform" }
runtime = { path = "../runtime" }
rusqlite.workspace = true
serde.workspace = true
serde_yaml = "0.9"
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
toml.workspace = true
tools = { path = "../tools" }
uuid.workspace = true
zip = "2.2"

[dev-dependencies]
tempfile.workspace = true
