[package]
name = "octopus-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64 = "0.22"
chacha20poly1305 = "0.10"
futures = "0.3"
getrandom = "0.2"
octopus-core = { path = "../octopus-core" }
octopus-persistence = { path = "../octopus-persistence" }
octopus-sdk = { path = "../octopus-sdk" }
reqwest.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
